--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "^18.2.0",
     "styled-components": "^5.3.5",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "framer-motion": "10.11.2",
+    "styled-system": "^5.1.5",
+    "@types/styled-system": "^5.1.15"
   },
   "files": [
     "dist/"
