--- a/package.json
+++ b/package.json
@@ -7,24 +7,37 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "prepare": "yarn build"
+    "prepare": "yarn build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.12",
+    "@storybook/addon-interactions": "^7.0.12",
+    "@storybook/addon-links": "^7.0.12",
+    "@storybook/blocks": "^7.0.12",
+    "@storybook/react": "^7.0.12",
+    "@storybook/react-vite": "^7.0.12",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.15",
     "@types/styled-components": "^5.1.25",
-    "typescript": "^5.0.4"
+    "prop-types": "^15.8.1",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.12",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.8"
   },
   "dependencies": {
     "@types/node": "^13.13.5",
+    "@types/styled-system": "^5.1.15",
+    "framer-motion": "10.11.2",
     "react": "^18.2.0",
     "styled-components": "^5.3.5",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "framer-motion": "10.11.2",
     "styled-system": "^5.1.5",
-    "@types/styled-system": "^5.1.15"
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0"
   },
   "files": [
     "dist/"
