--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest --run",
     "build": "tsc",
     "prepare": "yarn build",
     "storybook": "storybook dev -p 6006",
@@ -22,12 +22,20 @@
     "@storybook/react-vite": "^7.0.12",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "prop-types": "^15.8.1",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.12",
     "typescript": "^5.0.4",
-    "vite": "^4.3.8"
+    "vite": "^4.3.8",
+    "vitest": "^0.27.2",
+    "@testing-library/react": "^12.1.3",
+    "@vanilla-extract/vite-plugin": "^3.8.0",
+    "@vitejs/plugin-react": "4.0.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-styled-components": "^7.0.8"
   },
   "dependencies": {
     "@types/node": "^13.13.5",
