--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@vitejs/plugin-react": "4.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "jest-environment-jsdom": "^29.3.1",
-    "jest-styled-components": "^7.0.8"
+    "jest-styled-components": "^7.0.8",
+    "@types/react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.3.0"
   },
   "dependencies": {
     "@types/node": "^13.13.5",
