--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "jest-environment-jsdom": "^29.3.1",
     "jest-styled-components": "^7.0.8",
-    "@types/react-router-dom": "^5.3.3",
-    "react-router-dom": "^6.3.0"
+    "@types/react-router-dom": "^5.1.7",
+    "react-router-dom": "^5.2.0",
+    "themeprovider-storybook": "^1.7.2",
+    "polished": "^3.3.2"
   },
   "dependencies": {
     "@types/node": "^13.13.5",
