--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@types/react-router-dom": "^5.1.7",
     "react-router-dom": "^5.2.0",
     "themeprovider-storybook": "^1.7.2",
-    "polished": "^3.3.2"
+    "polished": "^3.3.2",
+    "@types/rebass": "^4.0.7"
   },
   "dependencies": {
     "@types/node": "^13.13.5",
@@ -49,7 +50,9 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "rebass": "^4.0.7",
+    "react-feather": "^2.0.8"
   },
   "files": [
     "dist/"
