--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "react-router-dom": "^5.2.0",
     "storybook": "^7.0.12",
     "themeprovider-storybook": "^1.7.2",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "vite": "^4.3.8",
     "vitest": "^0.27.2"
   },
   "dependencies": {
-    "@real-wagmi/sdk": "^0.0.2",
+    "@real-wagmi/sdk": "^1.1.6",
+    "@storybook/addon-themes": "^7.5.3",
     "@types/node": "^13.13.5",
     "@types/styled-system": "^5.1.15",
     "framer-motion": "10.11.2",
