--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "vitest": "^0.27.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@reach/portal": "^0.18.0",
     "@real-wagmi/sdk": "^1.1.6",
     "@storybook/addon-themes": "^7.5.3",
     "@types/node": "^13.13.5",
@@ -50,6 +52,7 @@
     "framer-motion": "10.11.2",
     "react": "^18.2.0",
     "react-feather": "^2.0.8",
+    "react-popper": "^2.3.0",
     "rebass": "^4.0.7",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
