--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@real-wagmi/uikit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "vitest --run",
-    "build": "tsc",
+    "start": "tsup --watch",
+    "build": "tsup",
     "prepare": "yarn build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -38,6 +39,7 @@
     "react-router-dom": "^5.2.0",
     "storybook": "^7.0.12",
     "themeprovider-storybook": "^1.7.2",
+    "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^4.3.8",
     "vitest": "^0.27.2"
