--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "@real-wagmi/uikit",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": [
+    "src/theme/**/*"
+  ],
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
     "test": "vitest --run",
-    "start": "tsup --watch",
-    "build": "tsup",
+    "build": "vite build",
     "prepare": "yarn build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -29,7 +39,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/rebass": "^4.0.7",
     "@types/styled-components": "^5.1.25",
-    "@vanilla-extract/vite-plugin": "^3.8.0",
+    "@vanilla-extract/vite-plugin": "^3.9.0",
     "@vitejs/plugin-react": "4.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-styled-components": "^7.0.8",
@@ -39,9 +49,9 @@
     "react-router-dom": "^5.2.0",
     "storybook": "^7.0.12",
     "themeprovider-storybook": "^1.7.2",
-    "tsup": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^4.3.8",
+    "vite-plugin-dts": "^3.6.3",
     "vitest": "^0.27.2"
   },
   "dependencies": {
@@ -61,10 +71,18 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
+  },
   "repository": "https://github.com/RealWagmi/uikit.git",
   "files": [
-    "dist/"
+    "dist"
   ],
+  "engines": {
+    "node": ">=16"
+  },
   "publishConfig": {
     "access": "public"
   },
