--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@real-wagmi/uikit",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "sideEffects": [
     "src/theme/**/*"
   ],
@@ -50,7 +51,7 @@
     "storybook": "^7.0.12",
     "themeprovider-storybook": "^1.7.2",
     "typescript": "^5.2.2",
-    "vite": "^4.3.8",
+    "vite": "4.3.9",
     "vite-plugin-dts": "^3.6.3",
     "vitest": "^0.27.2"
   },
