--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "8.0.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.1.7",
