--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@reach/portal": "^0.18.0",
     "@real-wagmi/sdk": "^1.1.6",
     "@storybook/addon-themes": "^7.5.3",
+    "@styled-system/should-forward-prop": "^5.1.5",
     "@types/styled-system": "^5.1.15",
     "framer-motion": "10.11.2",
     "react": "^18.2.0",
