--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@real-wagmi/sdk": "^1.2.0",
     "@storybook/addon-themes": "^7.5.3",
     "@types/styled-system": "^5.1.15",
+    "@types/uuid": "^9.0.7",
     "framer-motion": "10.11.2",
     "react": "^18.2.0",
     "react-feather": "^2.0.8",
@@ -71,7 +72,8 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "uuid": "^9.0.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
