added density chart

--- a/package.json
+++ b/package.json
@@ -61,16 +61,23 @@
     "@popperjs/core": "^2.11.8",
     "@reach/portal": "^0.18.0",
     "@real-wagmi/sdk": "^1.2.2",
+    "@real-wagmi/v3-sdk": "^1.2.4",
     "@storybook/addon-themes": "^7.5.3",
     "@types/styled-system": "^5.1.15",
     "@types/uuid": "^9.0.7",
     "framer-motion": "10.11.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-feather": "^2.0.8",
     "react-popper": "^2.3.0",
     "rebass": "^4.0.7",
+    "recharts": "^2.0.9",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
+    "swr": "^2.2.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "uuid": "^9.0.1"
