--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@real-wagmi/uikit",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -60,8 +60,8 @@
     "@ethersproject/address": "5.7.0",
     "@popperjs/core": "^2.11.8",
     "@reach/portal": "^0.18.0",
-    "@real-wagmi/sdk": "^1.3.2",
-    "@real-wagmi/v3-sdk": "^1.3.1",
+    "@real-wagmi/sdk": "latest",
+    "@real-wagmi/v3-sdk": "latest",
     "@storybook/addon-themes": "^7.5.3",
     "@types/styled-system": "^5.1.15",
     "@types/uuid": "^9.0.7",
