--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@real-wagmi/uikit",
-  "version": "1.3.14",
+  "version": "1.3.15",
   "description": "",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -22,7 +22,7 @@
     "prepare": "yarn build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prettier": "prettier --loglevel silent --write \"*/**/*.{js,ts}\""
+    "prettier": "prettier --write \"*/**/*.(ts|js)\""
   },
   "author": "Wagmi",
   "license": "MIT",
@@ -61,8 +61,8 @@
     "@ethersproject/address": "5.7.0",
     "@popperjs/core": "^2.11.8",
     "@reach/portal": "^0.18.0",
-    "@real-wagmi/sdk": "1.3.5",
-    "@real-wagmi/v3-sdk": "1.3.8",
+    "@real-wagmi/sdk": "1.3.9",
+    "@real-wagmi/v3-sdk": "1.3.9",
     "@storybook/addon-themes": "^7.5.3",
     "@types/styled-system": "^5.1.15",
     "@types/uuid": "^9.0.7",
