--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "@real-wagmi/sdk": "1.4.0",
     "@real-wagmi/v3-sdk": "1.4.0",
     "@storybook/addon-themes": "^7.5.3",
+    "@tanstack/react-query": "^5.59.16",
     "@types/styled-system": "^5.1.15",
     "@types/uuid": "^9.0.7",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "10.11.2",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
